test/errors/structure_types_error/zs/packable_subtyped_enum_field_error.zs
package packable_subtyped_enum_field_error;

enum uint8 TestEnum
{
    ONE,
    TWO
};

subtype TestEnum SubtypedEnum;

struct PackableSubtypedEnumFieldError
{
    packable SubtypedEnum subtypedEnum;
};
